5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1764_2390.log
== TEST (2019-05-28 13:20:08) 
-- CODE:
from numpy import*
fre = array()
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:38:31) 
-- CODE:
from numpy import*
fre = array()
maior_fre = max(fre)

i = 0
while(i < size(fre)):
	if(fre[i] == maior_fre):
		mes = i + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:39:39) 
-- CODE:
from numpy import*
frequencia = array()
maiorfrequencia = max(fre)

i = 0
while(i < size(frequencia)):
	if(frequencia[i] == maiorfrequencia):
		mes = i + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:39:46) 
-- CODE:
from numpy import*
frequencia = array("")
maiorfrequencia = max(fre)

i = 0
while(i < size(frequencia)):
	if(frequencia[i] == maiorfrequencia):
		mes = i + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:40:01) 
-- CODE:
from numpy import*
frequencia = array("")
maiorfrequencia = max(frequencia)

i = 0
while(i < size(frequencia)):
	if(frequencia[i] == maiorfrequencia):
		mes = i + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:40:24) 
-- CODE:
from numpy import*
frequencia = array(input("frequencia:"))
maiorfrequencia = max(frequencia)

i = 0
while(i < size(frequencia)):
	if(frequencia[i] == maiorfrequencia):
		mes = i + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:48:43) 
-- CODE:
from numpy import*

f = array(input("frequencia:"))
fm = array(input("maior frequencia:"))
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:50:01) 
-- CODE:
from numpy import*

f = array(input("frequencia:"))
fm = array(input("maior frequencia:"))

i = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.43942
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 8, in <module>
    if(f[i] == mf):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:50:02) 
-- CODE:
from numpy import*

f = array(input("frequencia:"))
fm = array(input("maior frequencia:"))

i = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.536719
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 8, in <module>
    if(f[i] == mf):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:50:04) 
-- CODE:
from numpy import*

f = array(input("frequencia:"))
fm = array(input("maior frequencia:"))

i = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:50:35) 
-- CODE:
from numpy import*

f = array(input("frequencia:"))
fm = array(input("maior frequencia:"))

i = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:51:12) 
-- CODE:
from numpy import*

f = array(input("frequencia:"))
fm = array(input("maior frequencia:")) max(f)

i = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- ERROR:
File "XXXX", line 4
    fm = array(input()) max(f)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:51:40) 
-- CODE:
from numpy import*

f = array(input("frequencia:"))
fm = max(f)

i = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:54:45) 
-- CODE:
from numpy import*

f = array(input("frequencia:"))
fm = max(f)

i = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:54:46) 
-- CODE:
from numpy import*

f = array(input("frequencia:"))
fm = max(f)

i = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.390708
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 4, in <module>
    fm = max(f)
TypeError: iteration over a 0-d array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:54:47) 
-- CODE:
from numpy import*

f = array(input("frequencia:"))
fm = max(f)

i = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:54:47) 
-- CODE:
from numpy import*

f = array(input("frequencia:"))
fm = max(f)

i = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.49154
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 4, in <module>
    fm = max(f)
TypeError: iteration over a 0-d array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:54:52) 
-- CODE:
from numpy import*

f = array(input("frequencia:"))
fm = max(f)

i = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.510344
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 4, in <module>
    fm = max(f)
TypeError: iteration over a 0-d array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:56:23) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
fm = max(f)

i = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.40848
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 8, in <module>
    if(f[i] == mf):
NameError: name 'mf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:56:27) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
fm = max(f)

i = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.435354
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 8, in <module>
    if(f[i] == mf):
NameError: name 'mf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:56:27) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
fm = max(f)

i = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
1.65711
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 8, in <module>
    if(f[i] == mf):
NameError: name 'mf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:56:28) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
fm = max(f)

i = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.651325
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 8, in <module>
    if(f[i] == mf):
NameError: name 'mf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:56:28) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
fm = max(f)

i = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
1.78809
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 8, in <module>
    if(f[i] == mf):
NameError: name 'mf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:57:59) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
fm = max(f)

i = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.507232
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 8, in <module>
    if(f[i] == mf):
NameError: name 'mf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:58:27) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
fm = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.393793
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 9, in <module>
    if(f[i] == mf):
NameError: name 'mf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:58:29) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
fm = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:58:29) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
fm = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.390796
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 9, in <module>
    if(f[i] == mf):
NameError: name 'mf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:58:31) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
fm = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.620647
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 9, in <module>
    if(f[i] == mf):
NameError: name 'mf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:58:58) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
fm = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = mes + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:59:00) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
fm = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = mes + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.483124
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 9, in <module>
    if(f[i] == mf):
NameError: name 'mf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:59:01) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
fm = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = mes + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.436925
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 9, in <module>
    if(f[i] == mf):
NameError: name 'mf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:59:02) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
fm = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = mes + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:59:03) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
fm = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = mes + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.346075
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 9, in <module>
    if(f[i] == mf):
NameError: name 'mf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:59:55) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
mf = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = mes + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.366625
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
frequencia:1
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
frequencia:1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:00:03) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
mf = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = mes + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.378676
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
1
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:00:06) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
mf = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = mes + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:00:10) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
mf = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = mes + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.34739
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
1
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:00:22) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
mf = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		i = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.410903
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
0
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:00:24) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
mf = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		i = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.546875
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
0
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:00:38) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
mf = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.415322
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:55:40) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
mf = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
